--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </p>
             <p>
                 Join our community on
-                <a href="https://discord.gg/your_discord_link" target="_blank"
+                <a href="https://discord.gg/7wa8pBtccV" target="_blank"
                     >Discord</a
                 >
                 for server updates, discussions, and more!
