--- a/index.html
+++ b/index.html
@@ -147,9 +147,15 @@
                 <div class="mod">
                     <h3>Vampirism</h3>
                     <img src="images/vampirism.jpg" alt="Vampirism mod" />
+                    <p>Become a vampire or a vampire hunter in this thrilling mod.</p>
+                </div>
+
+                <!-- New Origins Mod Section -->
+                <div class="mod">
+                    <h3>Origins</h3>
+                    <img src="images/origins.jpg" alt="Origins mod" />
                     <p>
-                        Become a vampire or a vampire hunter in this thrilling
-                        mod.
+                        Choose unique abilities and traits based on different origins to customize your gameplay!
                     </p>
                 </div>
             </div>
@@ -163,9 +169,7 @@
             </p>
             <p>
                 Join our community on
-                <a href="https://discord.gg/7wa8pBtccV" target="_blank"
-                    >Discord</a
-                >
+                <a href="https://discord.gg/7wa8pBtccV" target="_blank">Discord</a>
                 for server updates, discussions, and more!
             </p>
             <p>Make sure to have all the mods installed before joining!</p>
