--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Minecraft server featuring Create, Mekanism, Ice and Fire, and Vampirism mods"
+            content="Minecraft server featuring Create, Mekanism, Ice and Fire, Vampirism, and Origins!"
         />
         <title>thatserver92</title>
         <style>
